== Change Log

=== 0.7.0-RC2
* Make specs and bootstrap work in instance mode. [Sean Cribbs]
* Override spec:integration task and rescope some spec task options to 
RADIANT_ROOT. [Sean Cribbs]
* Improve rspec-1.1.12 compatibility. [Sean Cribbs]
* Add Ruby 1.8.7 compatibility patch. [Sean Cribbs]
* Fix upgrade issue from 0.5.x where class_name is expected to be present.
[Sean Cribbs]
* Remove unneeded patch. [Sean Cribbs]
* Add some inline documentation to resource controller. [Sean Cribbs]
* Fix some form problems on pages. [Sean Cribbs]
* Fix form on snippets/remove. [Sean Cribbs]
* Make sure resourceful responses deeply clone on inheritance. [Sean Cribbs]
* Fix broken Ajax children callback. [Sean Cribbs]
* Fix broken URL in snippets/remove. [Sean Cribbs]
* Correct assume_migrated_upto_version behavior in instance mode. [Sean Cribbs]
* Correct missing @@configuration variable in initializer. [John Muhl]
* Handle SQL special characters in extension names in migrations. 
[Erik Ostrom]
* Converted extension migrations to use schema_migrations table instead 
of extension_meta. [Nathaniel Talbott, Sean Cribbs, Rick DeNatale]
* Replaced scenarios with dataset. [Nathaniel Talbott, Adam Williams, Rick DeNatale]
* Fix RSpec git submodules. [Nathaniel Talbott, Clinton Nixon]
* Generate and fix gemspec for GitHub. [Sean Cribbs]

=== 0.7.0-RC1
* Add support for newer Textile and Markdown libraries, with fallbacks
on packaged libraries. [Sean Cribbs, Jason Garber]
* Make request parameters available to tags. [Brian Landau]
* Add URL method helpers to tags. [Brian Landau]
* Add some database indexes. [Yevgeny Smirnoff]
* Added notice to install RSpec if a certain database error occurs.
[Sytse Sijbrandij]
* Refactor LoginSystem to use filter-skipping instead of controller
tracking. [Sean Cribbs]
* Add generator specs and more generators. [Brian Landau]
* Add initial integration specs. [Adam Williams, Mark Imbriaco]