@@ -4,6 +4,10 @@
 The following people have submitted changes which have been applied to the
 core:
 
+=== Edge
+
+* Sean Cribbs
+
 === 0.7.0-RC2
 
 * John Muhl
