@@ -84,38 +84,40 @@ describe Admin::PagesController do
      :delete => [:destroy]}.each do |method, actions|
       actions.each do |action|
         before :each do
-          @parameters = case action
-          when :index
-            {}
-          when :new
-            {:page_id => page_id(:home)}
-          else
-            {:id => page_id(:home)}
+          @parameters = lambda do 
+            case action
+            when :index
+              {}
+            when :new
+              {:page_id => page_id(:home)}
+            else
+              {:id => Page.first.id} 
+            end
           end
         end
         
         it "should require login to access the #{action} action" do
           logout
-          lambda { send(method, action, @parameters) }.should require_login
+          lambda { send(method, action, @parameters.call) }.should require_login
         end
 
         it "should allow access to admins for the #{action} action" do
           lambda { 
-            send(method, action, @parameters) 
+            send(method, action, @parameters.call) 
           }.should restrict_access(:allow => [users(:developer)], 
                                    :url => '/admin/pages')
         end
 
         it "should allow access to developers for the #{action} action" do
           lambda { 
-            send(method, action, @parameters) 
+            send(method, action, @parameters.call) 
           }.should restrict_access(:allow => [users(:developer)], 
                                    :url => '/admin/pages')
         end
       
         it "should allow non-developers and non-admins for the #{action} action" do
           lambda { 
-            send(method, action, @parameters) 
+            send(method, action, @parameters.call) 
           }.should restrict_access(:allow => [users(:non_admin), users(:existing)],
                                    :url => '/admin/pages')
         end
